<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GETFEED</string>
    <string name="entercode">Enter Survey/Quiz Code</string>
    <string name="action_settings">Settings</string>
    <string name="go_button">GO</string>
    <string name="welcome">Welcome</string>
    <string name="nw">Create New Survey/Quiz</string>
    <string name="name">Enter a name</string>
    <string name="create">Create</string>
    <string name="title_activity_create_feed">CreateFeed</string>
    <string name="feedback">Feedback</string>
    <string name="survey">Survey</string>
    <string name="quiz">Quiz</string>
    <string name="setpassword">Set Password</string>
    <string name="customerlistavailable">Customer List Available</string>
    <string name="time">Time for Quiz</string>
    <string name="title_activity_feed">Feed</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_quiz">Quiz</string>
    <string name="title_activity_survey">Survey</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="username">Your Name</string>
    <string name="usermailid">Your E-Mail</string>
    <string name="description">Description</string>

    <string-array name="feed_selector">
        <item>good_bad_ok</item>
        <item >friendly_special_bad</item>
        <item >1_2_3_4</item>
        <item >custom3</item>
        <item >custom4</item>
    </string-array>
</resources>