<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.feedback.getfeed.CreateFeed" >

    <EditText
        android:id="@+id/userNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" >
   <requestFocus />
    </EditText>
    <EditText
        android:id="@+id/emailIdET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/usermailid"
        android:inputType="textEmailAddress" />

    
    
    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textMultiLine" />
    
      <EditText
        android:id="@+id/feedNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" >
    </EditText>

    <RadioGroup
        android:id="@+id/typeradioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/egg_shell"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/feedbackRadio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback" />

        <RadioButton
            android:id="@+id/quizRadio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quiz" />

        <RadioButton
            android:id="@+id/surveyRadio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/survey" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/paswdreqdCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setpassword" />

    <CheckBox
        android:id="@+id/cListAvailableCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/customerlistavailable" />

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/timerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <SeekBar
            android:id="@+id/timeSeekBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:max="@integer/maxtime"
            android:progress="5" />

        <EditText
            android:id="@+id/timeText"
            android:layout_width="47dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            />

    </LinearLayout>

    <Button
        android:id="@+id/createFeedbutton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="createFeedDb"
        android:text="@string/create" />

</LinearLayout>
