<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/abc_action_bar_default_height"
    android:orientation="vertical"
    tools:context="com.feedback.getfeed.MainActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/welcome" />

    <EditText
        android:id="@+id/codeText"
        android:layout_width="233dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/abc_action_bar_subtitle_text_size"
        android:ems="10"
        android:hint="@string/entercode" />

    <Button
        android:id="@+id/goButton"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="68dp"
        android:layout_height="72dp"
        android:layout_gravity="center"
        android:hint="@string/entercode"
        android:text="@string/go_button"
        android:textColor="@color/aero_blue" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/abc_action_bar_default_height"
        android:text="@string/nw" />

    <Button
        android:id="@+id/createFeedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="createFeed"
        android:text="@string/create" />

</LinearLayout>
